--- a/watchesMarketplace/todos.html
+++ b/watchesMarketplace/todos.html
@@ -31,7 +31,7 @@
     </header>
     <main>
         <div class = "container-nav">
-            <div class = "container-1" id ="noBullet"></div>
+            <div class = "container-1"></div>
             <div class = "container-2"></div>
             <div class = "container-3"></div>
             <div class = "container-4"></div>
