--- a/watchesMarketplace/todos.html
+++ b/watchesMarketplace/todos.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles-Todos.css" type="text/css" >
-    <link rel="stylesheet" href="css/fontawesome.css">
-</head>
+    <!-- <link rel="stylesheet" href="css/fontawesome.css"> -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous"></head>
 <body>
 <div class="content">
     <header>
@@ -45,6 +45,12 @@
             <div class = "container-12"></div>
         </div>
     </main>
+    <div class="searchBox">
+        <input class="searchInput"type="text" name="" placeholder="Search">
+        <button class="searchButton" href="#">
+            <i class="fas fa-search"></i>
+        </button>
+    </div>
     <nav>
         <div class="nav">
             <label class ="nav">Land
