--- a/watchesMarketplace/auth.html
+++ b/watchesMarketplace/auth.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link href="styles-Index.css" rel="stylesheet" type="text/css" />
+    <link href="styles-auth.css" rel="stylesheet" type="text/css" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
