--- a/watchesMarketplace/auth.html
+++ b/watchesMarketplace/auth.html
@@ -23,6 +23,7 @@
     </div>
     <script src="main.js"></script>
     <script src="todos.js"></script>
+    <script src="test.js"></script>
 </body>
 
 </html>
