--- a/watchesMarketplace/todos.html
+++ b/watchesMarketplace/todos.html
@@ -15,7 +15,7 @@
             <span class="nav-icon">
                 <i class="fas fa-bars"></i>
             </span>
-            <div class="cart-bn">
+            <div class="cart-btn">
                 <span class="nav-icon">
                     <i class="fas fa-cart-plus"></i>
                 </span>
@@ -42,7 +42,7 @@
         <div class="products-center">
             <article class="product">
                 <div class="img-container">
-                    <img src="./Poze/Trail Running.jpg" alt = "product" class="product-img">
+                    <img src="" alt = "product" class="product-img">
                     <button class="bag-btn" data-id="1">
                         <i class="fas fa-shopping-cart"></i>
                         Experience
@@ -63,21 +63,6 @@
             </span>
             <h2>Your cart</h2>
             <div class="cart-content">
-                <!--Cart item-->
-                <div class="cart-item">
-                    <img src="./Poze/Trail Running.jpg" alt="Trail Running">
-                    <div>
-                        <h4>Trail Running</h4>
-                        <h5>16$</h5>
-                        <span class="remove-item"></span>
-                    </div>
-                    <div>
-                        <i class="fas fa-chevron-up"></i>
-                        <p class="item-amount">1</p>
-                        <i class="fas fa-chevron-down"></i>
-                    </div>
-                </div>
-                <!--End Cart item-->
             </div>
             <div class="cart-footer">
                 <h3>Your Total: $ <span class="cart-total">0</span></h3>
@@ -86,7 +71,7 @@
         </div>
     </div>
     <!--End Cart-->
-    <scrip src="main.js"></scrip>
-    <scrip src="app.js"></scrip>
+    <!-- <scrip src="main.js"></scrip> -->
+    <script src="app.js"></script>
 </body>
 </html>
